# sgr

./: .gitignore  alembic.ini  hello.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5fbaa0f46a37_adicionando_chaves_estrangeiras_em_.py  65ccf0f4402d_criando_tabelas_iniciais.py  65f9417938e4_adicionando_campo_status_em_requisitos.py  71bcc3526e95_corrigindo_relacionamento_entre_.py  f3c0a6e03b2f_adicionando_user_id_a_requisito.py  fa5c39c8361e_adicionando_campo_status_em_requisitos.py
app/: crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
app/routes/: auth.py  projetos.py  requisitos.py
lock/: hello.py  pyproject.toml
requisitos-service/app/: crud.py  database.py  main.py  models.py  routes.py  schemas.py
